--- a/AppLanches/AppLanches.csproj
+++ b/AppLanches/AppLanches.csproj
@@ -74,7 +74,7 @@
 	  <MauiXaml Update="Pages\InscricaoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\Login.xaml">
+	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
